# OpenMP_Project

./: Install_OpenMP.docx  Install_OpenMP_Project.docx  OpenMP_Project_Explanation.docx  config.xlaunch
ROS/src/open_mp_urdf/: CMakeLists.txt  open_mp.xacro  package.xml
ROS/src/openmp_moveit/: CMakeLists.txt  package.xml
ROS/src/openmp_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  open_mp.srdf  ros_controllers.yaml
ROS/src/openmp_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  digital_clone.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  open_mp_moveit_controller_manager.launch.xml  pick_and_place.launch  planning_context.launch  planning_pipeline.launch.xml  publish_joint.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ROS/src/openmp_moveit/scripts/: mover.py  trajectory_subscriber.py
ROS/src/openmp_moveit/srv/: MoverService.srv
UnityOpenMP/Assets/Resources/: ROSConnectionPrefab.prefab
UnityOpenMP/Assets/Scenes/: UnityOpenMP.unity
UnityOpenMP/Assets/Scripts/: JointsSubscriber.cs  SourceDestinationPublisher.cs  TrajectoryPlanner.cs
UnityOpenMP/Assets/URDF/open_manipulator/: open_mp.urdf
UnityOpenMP/UserSettings/: EditorUserSettings.asset
UnityOpenMP/UserSettings/Layouts/: default-2021.dwlt
docker/: Dockerfile  tutorial
(+99 files in other folders)
