<?xml version="1.0"?>
<package format="2">
  <name>open_mp_urdf</name>
  <version>0.0.0</version>
  <description>The open_mp_urdf package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export> 
  </export>
</package>
